--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
     "cSpell.words": [
+        "blogpost",
         "checkbtn",
         "checkmail",
         "Chiang",
+        "entryid",
         "Giftedschool",
         "PHOTOSHOP",
         "Prepschool",
