lab13_done_css_unfinshed

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,11 @@
 {
     "cSpell.words": [
         "blogpost",
+        "changepass",
         "checkbtn",
         "checkmail",
         "Chiang",
+        "editpass",
         "entryid",
         "Giftedschool",
         "PHOTOSHOP",
